--- a/src/template/index.html
+++ b/src/template/index.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>template</title>
+    <title>索获后台管理系统</title>
 </head>
 
 <body>
-    <div id="root"></div>
-    <div id="app-root"></div>
-    <div id="modal-root"></div>    
+    <div id="root"></div> 
 </body>
 
 </html>
