--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -3,7 +3,6 @@
   height: 100%;
   .soho_layout_header {
     height: 60px;
-    border-bottom: 1px solid #eee;
   }
 
   .soho_layout_center {
@@ -12,7 +11,7 @@
   .soho_layout_menu {
     width: 190px;
     height: calc(100vh - 60px);
-    background: #666;
+    background: #497fff;
   }
   .soho_layout_content {
     width: calc(100vw - 190px);
