--- a/src/style/antd.scss
+++ b/src/style/antd.scss
@@ -1,5 +1,5 @@
 :global {
-  .ant-menu {
-    background: #497fff !important;
-  }
+  // .ant-menu {
+  //   background: #497fff !important;
+  // }
 }
