--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -122,4 +122,16 @@
   li {
     list-style: none;
   }
+
+  .search_box {
+    width: 100%;
+    background: #fff;
+    padding: 5px;
+    margin-bottom: 10px;
+  }
+  .table_box {
+    width: 100%;
+    background: #fff;
+    padding: 5px;
+  }
 }
